--- a/pourquoi-questionnaire.html
+++ b/pourquoi-questionnaire.html
@@ -90,6 +90,12 @@
     </style>
 </head>
 <body>
+    <nav>
+        <ul style="display:flex; gap:20px; list-style:none; padding:0; margin-bottom:30px; justify-content:center;">
+            <li><a href="pourquoi-questionnaire.html">Pourquoi ce questionnaire ?</a></li>
+            <li><a href="questionnaire-dynamique.html">Répondre au questionnaire</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <div class="logo">
             <img src="/api/placeholder/180/80" alt="Logo La France Insoumise">
